<resources>
    <string name="app_name">Hello Games</string>
    <string name="press_the_button">Press the Button</string>
    <string name="get_todo">Get TODO</string>
    <string name="wait">Wait</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="know_more">Do you want to know more ?</string>
    <string name="lorem_ipsum">Orientis vero limes in longum protentus et rectum ab Euphratis fluminis ripis ad usque
        supercilia porrigitur Nili, laeva Saracenis conterminans gentibus, dextra pelagi fragoribus patens, quam plagam
        Nicator Seleucus occupatam auxit magnum in modum, cum post Alexandri Macedonis obitum successorio iure teneret
        regna Persidis, efficaciae inpetrabilis rex, ut indicat cognomentum.
    </string>
    <string name="game_info">Game Info</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="nb_players">Nb players:</string>
    <string name="year">Year:</string>
    <string name="textView">TextView</string>
</resources>
