<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".DetailedFragment" android:id="@+id/frameLayout">
    <Button
            android:text="@string/know_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/gameKnowMore"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="84dp" android:layout_marginStart="84dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="564dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp" android:layout_marginBottom="119dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/lorem_ipsum"
            android:layout_width="320dp"
            android:layout_height="127dp"
            android:id="@+id/gameDescription"
            android:layout_marginBottom="65dp" app:layout_constraintBottom_toTopOf="@+id/gameKnowMore"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/game_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="49dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="127dp" android:layout_marginStart="127dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="127dp"
            android:layout_marginRight="127dp" android:textStyle="bold|italic" android:textColor="#14E7FF"/>
    <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp" tools:src="@tools:sample/avatars"
            android:id="@+id/gameImage"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginBottom="91dp"
            app:layout_constraintBottom_toTopOf="@+id/gameDescription" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/todo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textStyle="bold"
            android:textColor="#000000" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/gameImage"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textStyle="bold" android:textColor="#050505"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginBottom="4dp" app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/gameImage" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/nb_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textStyle="bold"
            android:textColor="#000000" app:layout_constraintStart_toEndOf="@+id/gameImage"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"/>
    <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:textStyle="bold"
            android:textColor="#000000" app:layout_constraintStart_toEndOf="@+id/gameImage"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameName"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameType"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gameName" android:layout_marginLeft="90dp"
            android:layout_marginStart="90dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="128dp"
            android:layout_marginRight="128dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"/>
    <TextView
            android:text="@string/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameNbPlayers" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gameYear" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gameType" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameYear" android:layout_marginLeft="75dp" android:layout_marginStart="75dp"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="136dp" android:layout_marginRight="136dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>